--- a/ci-start-project/index.html
+++ b/ci-start-project/index.html
@@ -13,7 +13,7 @@
 	<div class="container">
 		<div class="jumbotron text-center">
 		  <h1>CI Start Project</h1><br>
-		  <p><a target="_blank" class="btn btn-primary btn-lg" href="https://github.com/aghidayat/aghidayat.github.io/tree/master/ci-start-project">Download</a></p>
+		  <p><a target="_blank" class="btn btn-primary btn-lg" href="https://github.com/aghidayat/ci-start-project">Download</a></p>
 		</div>
 
 		<div class="panel panel-default">
@@ -44,7 +44,7 @@
 		  </div>
 		  <div class="panel-body">
 		  	<ul style="list-style:none;">
-		  		<li>1. Download terlebih dahulu <a target="_blank" href="https://github.com/aghidayat/aghidayat.github.io/tree/master/ci-start-project">ci-start-project</a>
+		  		<li>1. Download terlebih dahulu <a target="_blank" href="https://github.com/aghidayat/ci-start-project">ci-start-project</a>
 		  		kemudian simpan di folder projek anda.
 		  		</li>
 		  		<li>
